# task-manager-api

./: .dockerignore  .env.example  .gitignore  CLOUD_RUN_DEPLOY.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  service.yaml
alembic/: env.py
alembic/versions/: 042dedad437c_add_tasks_table.py  0a14cb667cbc_add_hashed_password_to_users.py  7315bf6609d4_initial_migration.py  9876543210ab_refactor_to_uuid_and_add_audit_columns.py
app/: main.py
app/api/: deps.py
app/api/routes/: auth.py  health.py  tasks.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: base.py  session.py
app/models/: task.py  user.py
app/schemas/: error.py  task.py  token.py  user.py
http/: auth.http  health.http  tasks.http
scripts/: clean_db.py  dev.py  lint.py  seed.py
sql/: db_production.sql
tests/: conftest.py
tests/integration/: test_auth.py  test_errors.py  test_protected.py  test_put_validation.py  test_tasks.py
